<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Summoner Profiles - League of Legends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="summPrompt">Summoner Name</string>
    <string name="summFind">Find Summoner</string>
    <string name="summLevel">Summoner Level</string>
    <string name="title_activity_summoner_profile">SummonerProfile</string>
    <string name="matchHistory">Match History</string>
    <string name="rankedStats">Ranked Stats</string>
    <string name="totalStats">Total Stats</string>

    <!-- String arrays-->

    <!-- spinner list-->
    <string-array name="regionSpinner">
        <item>BR1</item>
        <item>EUN1</item>
        <item>EUW1</item>
        <item>LA1</item>
        <item>LA2</item>
        <item>NA1</item>
        <item>OC1</item>
        <item>RU</item>
        <item>TR1</item>
        <item>KR</item>
        <item>JP1</item>
    </string-array>

</resources>
