<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="chris.portokalis.summonerprofiles_leagueoflegends.SummonerProfile">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:layout_height="100dp"
            android:layout_width="100dp"
            android:id="@+id/summonerIconImage"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/summLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foundSummLevel"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/summPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foundSummName"/>
    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:gravity="center_horizontal" >

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/totalStats"
            android:text="@string/totalStats"
            android:textSize="12sp"
            android:enabled="false"/>
        <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/matchHistoryButton"
                android:text="@string/matchHistory"
                android:textSize="12sp"/>


        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/rankedStats"
            android:text="@string/rankedStats"
            android:textSize="12sp"/>
     </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/profileScrollView">
    </ScrollView>

</LinearLayout>
